<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="20dp">

            <Button
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/home" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rental"
            android:textColor="@color/red_header"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/white"
                android:drawablePadding="6dp"
                android:drawableTop="@drawable/home_splash"
                android:padding="4dp"
                android:text="@string/home"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/white"
                android:drawablePadding="6dp"
                android:drawableTop="@drawable/villa"
                android:padding="4dp"
                android:text="@string/villa"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/white"
                android:drawablePadding="6dp"
                android:drawableTop="@drawable/flat"
                android:padding="4dp"
                android:text="@string/flats"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red_header"
            android:drawableRight="@drawable/right_arrow"
            android:gravity="start|center"
            android:padding="12dp"
            android:text="@string/account_already"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@color/red_header"
            android:drawableRight="@drawable/right_arrow"
            android:gravity="start|center"
            android:padding="12dp"
            android:text="@string/sign_up"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>