<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rsb="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/white"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="6dp"
                        android:text="@string/locality"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                    <Button
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_margin="3dp"
                        android:background="@drawable/location_search" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="6dp"
                    android:text="@string/property_type"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:background="@color/white"
                        android:drawablePadding="6dp"
                        android:drawableTop="@drawable/home_small"
                        android:padding="4dp"
                        android:text="@string/home"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_subtitle" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:background="@color/white"
                        android:drawablePadding="6dp"
                        android:drawableTop="@drawable/villa_small"
                        android:padding="4dp"
                        android:text="@string/villa"
                        android:textAllCaps="false"

                        android:textSize="@dimen/text_subtitle" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:background="@color/white"
                        android:drawablePadding="6dp"
                        android:drawableTop="@drawable/apartment_small"
                        android:padding="4dp"
                        android:text="@string/flats"
                        android:textAllCaps="false"

                        android:textSize="@dimen/text_subtitle" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/amenities"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey" />

                <LinearLayout
                    android:id="@+id/layout_list"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:gravity="center"

                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:background="@drawable/left_arrow" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:gravity="center">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recycler_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:background="@drawable/right_arrow_gray" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:text="Rooms"
                        android:textColor="@color/red_header"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinner_rooms"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spionner_height" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:text="Facing"
                        android:textColor="@color/red_header"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinner_facing"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spionner_height" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:text="Overlooking"
                        android:textColor="@color/red_header"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinner_overlooking"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spionner_height" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:text="Overlooking"
                        android:textColor="@color/red_header"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinner_overlooking_1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spionner_height" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:text="Parking"
                        android:textColor="@color/red_header"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinner_parking"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spionner_height" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/price_range"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right|center"
                    android:orientation="horizontal"
                    android:paddingRight="8dp">

                    <TextView

                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:background="@drawable/rupee" />

                    <TextView
                        android:id="@+id/txt_min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1000"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_subtitle" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="to"
                        android:textSize="@dimen/text_subtitle" />

                    <TextView

                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:background="@drawable/rupee" />

                    <TextView
                        android:id="@+id/txt_max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10000"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_subtitle" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <LinearLayout
                        android:id="@+id/seekbar_placeholder"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone" />

                    <adapter.RangeSeekBar
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="-25dp" />

                    <Button
                        android:id="@+id/btn_search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@color/red_header"
                        android:text="@string/search"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>